changed font to opensans

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   background-image: linear-gradient(to bottom right, #336699 30%, #e67300);
   color: black;
-  font-family: Palanquin, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
