--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
 
 <!-- Always give preference to my CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+  <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'>
   </script>
