--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,13 @@ a {
 .flex-container {
   z-index: 2;
   position: relative;
-  display: flex;
+  
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  
   flex-flow: row wrap;
   justify-content: space-between;
   width: 85%;
@@ -51,14 +57,24 @@ a {
 }
 
 section {
-  display: flex;
-  flex-flow: row wrap;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */  flex-flow: row wrap;
+  
   flex: 100%;
   justify-content: space-between;
 }
 
 .prof_pic {
-  display: flex;
+  
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  
   flex: 1 1 20%;
   justify-content: center;
   align-items: center;
@@ -88,8 +104,13 @@ img {
 }
 
 .two_cols {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  
   width: 100%;
-  display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
 }
