--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ a {
   background: white;
   margin: 0 auto;
   margin-top: 5em;
-  //margin-bottom: 45em;
+  margin-bottom: 15em;
   border-radius: 5px;
   box-shadow: 0px 0px 35px gray;
 }
